src/test/deca/context/invalid/sansObj/type-non-decl.deca
// Description:
//      Déclaration d'une variable d'un type inconnu non déclaré auparavant
//
// Résultat:
//type non défini
//
{
    X x;
}